// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-form-field-file #render help should render component as expected 1`] = `
<gux-form-field-file>
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <slot name="input"></slot>
      <div class="gux-form-field-error">
        <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
        <div class="gux-message">
          <slot name="error"></slot>
        </div>
      </div>
      <div class="gux-form-field-help gux-show">
        <div class="gux-message">
          <slot name="help"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" aria-describedby="gux-form-field-help-i" id="avatar" name="avatar" slot="input" type="file">
  <span id="gux-form-field-help-i" slot="help">
    This is a help message
  </span>
</gux-form-field-file>
`;

exports[`gux-form-field-file #render input attributes should render component as expected (1) 1`] = `
<gux-form-field-file>
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <slot name="input"></slot>
      <div class="gux-form-field-error">
        <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
        <div class="gux-message">
          <slot name="error"></slot>
        </div>
      </div>
      <div class="gux-form-field-help">
        <div class="gux-message">
          <slot name="help"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" id="avatar" name="avatar" slot="input" type="file">
</gux-form-field-file>
`;

exports[`gux-form-field-file #render input attributes should render component as expected (2) 1`] = `
<gux-form-field-file>
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <slot name="input"></slot>
      <div class="gux-form-field-error">
        <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
        <div class="gux-message">
          <slot name="error"></slot>
        </div>
      </div>
      <div class="gux-form-field-help">
        <div class="gux-message">
          <slot name="help"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" disabled="" id="avatar" name="avatar" slot="input" type="file">
</gux-form-field-file>
`;

exports[`gux-form-field-file #render input attributes should render component as expected (3) 1`] = `
<gux-form-field-file>
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label gux-required">
        <slot name="label"></slot>
      </div>
      <slot name="input"></slot>
      <div class="gux-form-field-error">
        <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
        <div class="gux-message">
          <slot name="error"></slot>
        </div>
      </div>
      <div class="gux-form-field-help">
        <div class="gux-message">
          <slot name="help"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" id="avatar" name="avatar" required="" slot="input" type="file">
</gux-form-field-file>
`;

exports[`gux-form-field-file #render label-position should render component as expected (1) 1`] = `
<gux-form-field-file>
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <slot name="input"></slot>
      <div class="gux-form-field-error">
        <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
        <div class="gux-message">
          <slot name="error"></slot>
        </div>
      </div>
      <div class="gux-form-field-help">
        <div class="gux-message">
          <slot name="help"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" id="avatar" name="avatar" slot="input" type="file">
</gux-form-field-file>
`;

exports[`gux-form-field-file #render label-position should render component as expected (2) 1`] = `
<gux-form-field-file label-position="above">
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <slot name="input"></slot>
      <div class="gux-form-field-error">
        <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
        <div class="gux-message">
          <slot name="error"></slot>
        </div>
      </div>
      <div class="gux-form-field-help">
        <div class="gux-message">
          <slot name="help"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" id="avatar" name="avatar" slot="input" type="file">
</gux-form-field-file>
`;

exports[`gux-form-field-file #render label-position should render component as expected (3) 1`] = `
<gux-form-field-file label-position="beside">
  <mock:shadow-root>
    <div class="gux-beside gux-form-field-container">
      <div class="gux-beside gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <slot name="input"></slot>
      <div class="gux-form-field-error">
        <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
        <div class="gux-message">
          <slot name="error"></slot>
        </div>
      </div>
      <div class="gux-form-field-help">
        <div class="gux-message">
          <slot name="help"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" id="avatar" name="avatar" slot="input" type="file">
</gux-form-field-file>
`;

exports[`gux-form-field-file #render label-position should render component as expected (4) 1`] = `
<gux-form-field-file label-position="screenreader">
  <mock:shadow-root>
    <div class="gux-form-field-container gux-screenreader">
      <div class="gux-form-field-label gux-screenreader">
        <slot name="label"></slot>
      </div>
      <slot name="input"></slot>
      <div class="gux-form-field-error">
        <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
        <div class="gux-message">
          <slot name="error"></slot>
        </div>
      </div>
      <div class="gux-form-field-help">
        <div class="gux-message">
          <slot name="help"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" id="avatar" name="avatar" slot="input" type="file">
</gux-form-field-file>
`;
